{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "24034119-96d2-49e7-9a95-a8d654e060b4",
            "actions": [
                {
                    "name": "ThrottleAct",
                    "type": "Button",
                    "id": "61ee47d0-7a85-4101-8b0d-7b85a2faa9b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightAct",
                    "type": "Button",
                    "id": "4ccd9063-aa18-4704-ab7a-7bb102ffa1fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftAct",
                    "type": "Button",
                    "id": "4b2b60b7-96e4-4666-ba94-8dc48db1230f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BrakeAct",
                    "type": "Button",
                    "id": "27656699-eed7-4e76-a48b-b14bcfe86e96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6df1c95e-f0c3-4538-85ee-228a337b7bd5",
                    "path": "<Keyboard>/w",
                    "interactions": "Hold(duration=0.7)",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleAct",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c60dd46-49af-4c05-82d0-54a1fbe258d1",
                    "path": "<Keyboard>/a",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftAct",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a7d8e75-139d-4413-8eb6-07b2a59ad229",
                    "path": "<Keyboard>/d",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "RightAct",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d5fe298-0a57-40d9-b38c-d91e22f15b73",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BrakeAct",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}